--- a/[M1S10] Ex 1 - Loja Planta/index.html
+++ b/[M1S10] Ex 1 - Loja Planta/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://images.vexels.com/media/users/3/140278/isolated/preview/73d2c1d8a07fb1705bcad0712f07ec34-planta-floral.png" />
+    <link rel="icon" type="image/svg+xml" href="./assets/tree.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plant Store - sua loja de plantas</title>
+    <title>Loja de plantas JOI</title>
   </head>
   <body>
     <div id="root"></div>
